Fix indentation and other details

--- a/app/views/records/new.html.haml
+++ b/app/views/records/new.html.haml
@@ -1,6 +1,6 @@
 .page-header
-    %h3 
-        %i.fa.fa-calendar-check-o
-        Punch New Record
-    
+  %h2
+    = emojify @card.icon
+    Punch New Record
+
 = render 'form'
