--- a/app/views/records/_form.html.haml
+++ b/app/views/records/_form.html.haml
@@ -1,12 +1,7 @@
 = form_for [@card, @record] do |f|
 
   // ERROR MESSAGES
-  = render "shared/errors", model: @record
-
-  %p
-    %b Punchcard:
-    = emojify @card.icon
-    = @card.name
+  = render 'shared/errors', model: @record
 
   .form-group
     = f.label :date
@@ -14,12 +9,18 @@
 
   .form-group
     = f.label :hours
-    = f.number_field :hours, min: 1, :value => @record.hours, class: 'form-control'
+    %br
+    = f.text_field :hours, :data => { 'slider-min': '1', 'slider-max': '24', 'slider-step': '1', 'slider-value': '1' }
+    /= f.number_field :hours, min: 1, max: 24, :value => @record.hours, class: 'form-control'
 
   .form-group
     = f.label :description
-    = f.text_area :description, autofocus: true, rows: 10, style: "resize: vertical;", class: 'form-control wysihtml5', placeholder: 'Enter record description here...'
+    = f.text_area :description, autofocus: true, rows: 10, style: 'resize: vertical;', class: 'form-control wysihtml5', placeholder: 'Enter record description here...'
 
   .form-group
-    = f.submit ( f.object.new_record? ? "Punch Record" : "Save Changes"), class: 'btn btn-success'
+    = f.submit ( f.object.new_record? ? 'Punch Record' : 'Save Changes'), class: 'btn btn-success'
     = link_to 'Cancel', punchcards_path, class: 'btn btn-default'
+
+/ Bootstrap Slider CDN
+= stylesheet_link_tag 'https://cdnjs.cloudflare.com/ajax/libs/bootstrap-slider/9.7.2/css/bootstrap-slider.min.css'
+= javascript_include_tag 'https://cdnjs.cloudflare.com/ajax/libs/bootstrap-slider/9.7.2/bootstrap-slider.min.js'
