--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,14 +2,7 @@
 
 %html
 %head
-  %title Hourglass
-
-  = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true
-  = javascript_include_tag 'application', 'data-turbolinks-track' => true
-
-  / Bootstrap
-  = stylesheet_link_tag 'https://bootswatch.com/cerulean/bootstrap.min.css'
-  = javascript_include_tag 'https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js', "data-turbolinks-eval" => false
+  = render 'layouts/head'
 
   / Font Awesome
   = stylesheet_link_tag "https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css"
@@ -18,10 +11,6 @@
   = javascript_include_tag '//d3js.org/d3.v3.min.js'
   = javascript_include_tag '//cdn.jsdelivr.net/cal-heatmap/3.3.10/cal-heatmap.min.js'
   = stylesheet_link_tag '//cdn.jsdelivr.net/cal-heatmap/3.3.10/cal-heatmap.css'
-
-  = csrf_meta_tags
-
-  = favicon_link_tag 'favicon.ico'
 
 %body
   .container
