--- a/app/views/layouts/registrations.html.haml
+++ b/app/views/layouts/registrations.html.haml
@@ -2,40 +2,20 @@
 
 %html
 %head
-    %title Hourglass
-    
-    = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true
-    = javascript_include_tag 'application', 'data-turbolinks-track' => true
-    
-    
-    = stylesheet_link_tag 'https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css'
-    = stylesheet_link_tag 'https://bootswatch.com/cerulean/bootstrap.min.css'
-    
-    = javascript_include_tag '//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js'
-    
-    = stylesheet_link_tag "https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css"
-    
-    = csrf_meta_tags
-    
-    = favicon_link_tag 'favicon.ico'
-    
-%body
+  = render 'layouts/head'
 
-    .container
-        .row
-            .col-md-6.col-md-offset-3
-            
-                #logo.text-center
-                    .row
-                        .col-md-12
-                            = link_to root_path do
-                                %h1
-                                    = image_tag 'hourglass_icon128.png'
-                
-                // CONTENT
-                .panel.panel-default
-                    .panel-body
-                        
-                        = yield
-        
-                
+%body
+  .container
+    .row
+      .col-md-6.col-md-offset-3
+        #logo.text-center
+          .row
+            .col-md-12
+              = link_to root_path do
+                %h1= image_tag 'hourglass_icon128.png'
+
+        // CONTENT
+        .panel.panel-default
+          .panel-body
+            = yield
+
