--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -1,33 +1,19 @@
-%br
-    
-%nav.navbar.navbar-default{role: "navigation"}
-    / Brand and toggle get grouped for better mobile display
+%nav.navbar.navbar-default
+  .container
     .navbar-header
-        %button.navbar-toggle{"data-target" => ".navbar-ex1-collapse", "data-toggle" => "collapse", type: "button"}
-            %span.sr-only Toggle navigation
-            %span.icon-bar
-            %span.icon-bar
-            %span.icon-bar
-        = link_to root_path, class: 'navbar-brand' do
-            /= image_tag 'hourglass_icon24.png'
-            %strong Hourglass
-    
-    / Collect the nav links, forms, and other content for toggling
-    .collapse.navbar-collapse.navbar-ex1-collapse
-        %ul.nav.navbar-nav
-            
-            
-        %ul.nav.navbar-nav.navbar-right
-            - if user_signed_in?
-                %li.dropdown
-                    %a{ :class => 'dropdown-toggle', "data-toggle" => 'dropdown', :role => 'button', "aria-expanded" => false }
-                        %strong= current_user.email 
-                        %span.caret
-                    %ul{:class => 'dropdown-menu', :role => 'menu' }
-                        %li
-                            = link_to logout_path, method: :delete do
-                                %i.fa.fa-sign-out
-                                Logout
-                
-          
-        / /.navbar-collapse
+      %button.navbar-toggle.collapsed{"data-target" => "#bs-example-navbar-collapse-1", "data-toggle" => "collapse", :type => "button"}
+        %span.sr-only Toggle navigation
+        %span.icon-bar
+        %span.icon-bar
+        %span.icon-bar
+      = link_to 'Hourglass', root_path, class: 'navbar-brand'
+    .navbar-collapse
+      %ul.nav.navbar-nav.navbar-right
+        - unless user_signed_in?
+          %li= link_to 'Register', register_path
+          %li= link_to 'Login', login_path
+        - else
+          %li
+            = link_to logout_path do
+              %i.fa.fa-sign-out
+              Logout
