--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -13,22 +13,14 @@
   = stylesheet_link_tag '//cdn.jsdelivr.net/cal-heatmap/3.3.10/cal-heatmap.css'
 
 %body
+  = render 'layouts/navbar'
+
   .container
-    %br
-    %br
     .row
-      .col-md-10.col-md-offset-1
+      .col-md-12
         // ALERTS
         = render 'layouts/alerts'
 
-        // CONTENT
-        .row
-          .col-md-12
-            %p.small
-              Welcome back
-              %strong= current_user.email
-              \-
-              = link_to 'Logout', logout_path, method: :delete
         .panel.panel-default
           .panel-body
             = yield
