--- a/app/assets/stylesheets/punchcards.scss
+++ b/app/assets/stylesheets/punchcards.scss
@@ -2,6 +2,10 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+.punchcard-item {
+    margin-bottom: 20px;
+}
+
 .cal-footer {
     margin-top: 15px;
     border-top: 1px solid rgb(238, 238, 238);
