--- a/app/views/layouts/_head.html.haml
+++ b/app/views/layouts/_head.html.haml
@@ -1,6 +1,7 @@
 %title Hourglass
 
 = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true
+= javascript_include_tag 'application'
 
 / Bootstrap
 = stylesheet_link_tag "https://bootswatch.com/#{BOOTSTRAP_THEME}/bootstrap.min.css"
