--- a/app/views/layouts/_head.html.haml
+++ b/app/views/layouts/_head.html.haml
@@ -1,6 +1,6 @@
 %title Hourglass
 
-= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true
+= stylesheet_link_tag 'application', media: 'all'
 = javascript_include_tag 'application'
 
 / Bootstrap
