--- a/app/views/punchcards/_heatmap.html.haml
+++ b/app/views/punchcards/_heatmap.html.haml
@@ -37,7 +37,7 @@
     label: {
       position: "top"
     },
-    legend: [1, 3, 5],
+    legend: [0.5, 1, 3, 5],
 
     onClick: function(date, nb) {
       // Parse the date for ActiveRecord
