format hours correctly in views

--- a/app/views/punchcards/_stats.html.haml
+++ b/app/views/punchcards/_stats.html.haml
@@ -5,7 +5,7 @@
         %h5
           %small Total Hours
         %big.lead
-          = @card.total_hours
+          = format_hours(@card.total_hours)
           hours
         %h5
           %small
