--- a/app/views/punchcards/_latest_entries.html.haml
+++ b/app/views/punchcards/_latest_entries.html.haml
@@ -9,6 +9,6 @@
               %strong= link_to record.date.strftime("%A %B %d %Y"), [@card, record]
               .pull-right.text-muted
                 %i.fa.fa-clock-o
-                %strong= record.hours
+                %strong= format_hours(record.hours)
 
             %p.list-group-item-text= record.description.html_safe
