--- a/app/views/punchcards/show.html.haml
+++ b/app/views/punchcards/show.html.haml
@@ -1,28 +1,33 @@
-.row
-  .col-md-3
-    .text-center
-      = emojify @card.icon
-      %h3= @card.name
+.panel.panel-default
+  .panel-body
+    = render 'shared/errors', model: @record
 
-      %ul.list-inline
-        %li= link_to 'Edit', [:edit, @card]
-        %li= link_to 'Delete', punchcard_path, method: :delete, data: { confirm: 'Are you sure?' }
+    .row
+      .col-md-2
+        .text-center
+          = emojify @card.icon, size: :big
+          %h3= @card.name
 
-      = link_to new_punchcard_record_path(@card), class: 'btn btn-success btn-sm' do
-        %i.fa.fa-calendar-check-o
-        Punch
+          %ul.list-inline
+            %li= link_to 'Edit', [:edit, @card]
+            %li= link_to 'Delete', @card, method: :delete, data: { confirm: 'Are you sure?' }
 
-  .col-md-9
-    = render 'heatmap'
-    = render 'stats'
+          %button.btn.btn-success.btn-sm{ 'data-toggle': 'modal', 'data-target': '#new-record-modal' }
+            %span.fa.fa-calendar-check-o
+            Punch
+
+      .col-md-10
+        = render 'punchcards/heatmap'
+        = render 'punchcards/stats'
 
     %hr
 
-    // Latest Entries
-    = render 'latest_entries'
+    .row
+      .col-md-12
+        #record_area
+          %h3 Latest Entries
 
-%hr
+          = render @card.records.all.order('created_at DESC').limit(5)
 
-= link_to root_path do
-  %i.fa.fa-arrow-left
-  Back
+
+    = render 'records/form'
