--- a/app/views/punchcards/show.js.erb
+++ b/app/views/punchcards/show.js.erb
@@ -1,1 +1,1 @@
-$("#punchcard_area").html("<%= escape_javascript(render partial: 'punchcard', locals: { items: @card } ) %>");
+$("#punchcard-area").html("<%= escape_javascript(render partial: 'punchcard', locals: { items: @card } ) %>");
