--- a/app/views/records/_form.html.haml
+++ b/app/views/records/_form.html.haml
@@ -1,30 +1,29 @@
-= form_for [@card, @record] do |f|
+= simple_form_for([@card, @record]) do |f|
+  #new-record-modal.modal.fade{ role: 'dialog', tabindex: '-1' }
+    .modal-dialog
+      .modal-content
+        .modal-header
+          %button.close{'aria-label': 'Close', 'data-dismiss': 'modal', type: 'button' }
+            %span{ 'aria-hidden': 'true' } ×
+          %h4.modal-title
+            %span.fa.fa-plus
+            Punch New Record
+        .modal-body
+          = render 'shared/errors', model: @record
 
-  // ERROR MESSAGES
-  = render 'shared/errors', model: @record
+          .row
+            .col-md-6
+              = f.input :date, required: true
+            .col-md-6
+              = f.input :hours, input_html: { in: 0.5..10, step: 0.5 }, required: true
 
-  .row
-    .col-md-6
-      .form-group
-        = f.label :date
-        = f.date_select :date
+          .row
+            .col-md-12
+              = f.input :description, autofocus: true, input_html: { rows: 5,
+                style: 'resize: vertical;', placeholder: 'Enter record description here...' }, required: true
 
-    .col-md-6
-      .form-group
-        = f.label :hours
-        %br
-        = f.number_field :hours, in: 0.5..10, step: 0.5, class: 'form-control'
+        .modal-footer
+          = f.button :submit, class: 'btn btn-success'
+          /, data: {disable_with: 'Processing...'}
 
-  .row
-    .col-md-12
-      .form-group
-        = f.label :description
-        = f.text_area :description, autofocus: true, rows: 10,
-          style: 'resize: vertical;', class: 'form-control wysihtml5',
-          placeholder: 'Enter record description here...'
-
-  .form-group
-    = f.submit ( f.object.new_record? ? 'Punch Record' : 'Save Changes'),
-      class: 'btn btn-success', data: {disable_with: 'Processing...'}
-
-    = link_to 'Cancel', punchcards_path, class: 'btn btn-default'
+          %button.btn.btn-default{ 'data-dismiss': 'modal', type: 'button' } Close
