--- a/app/views/records/_form.html.haml
+++ b/app/views/records/_form.html.haml
@@ -1,15 +1,23 @@
-= simple_form_for([@card, @record]) do |f|
-  = render 'shared/errors', model: @record
+#manage-record.modal.fade{:role => "dialog", :tabindex => "-1"}
+  = simple_form_for([@card, @record]) do |f|
+    .modal-dialog{:role => "document"}
+      .modal-content
+        .modal-header
+          %button.close{"aria-label" => "Close", "data-dismiss" => "modal", :type => "button"}
+            %span{"aria-hidden" => "true"} ×
+          %h4.modal-title Punch Record
+        .modal-body
+          .row
+            .col-md-6
+              = f.input :date, required: true
+            .col-md-6
+              = f.input :hours, input_html: { in: 0.5..10, step: 0.5 }, required: true
 
-  .row
-    .col-md-6
-      = f.input :date, required: true
-    .col-md-6
-      = f.input :hours, input_html: { in: 0.5..10, step: 0.5 }, required: true
+          .row
+            .col-md-12
+              = f.input :description, autofocus: true, input_html: { rows: 5,
+                style: 'resize: vertical;', placeholder: 'Enter record description here...' }, required: true
 
-  .row
-    .col-md-12
-      = f.input :description, autofocus: true, input_html: { rows: 5,
-        style: 'resize: vertical;', placeholder: 'Enter record description here...' }, required: true
-
-  = f.button :submit, class: 'btn btn-success'
+        .modal-footer
+          %button.btn.btn-default{"data-dismiss" => "modal", :type => "button"} Close
+          = f.button :submit, class: 'btn btn-success'
