--- a/app/views/punchcards/_punchcard.html.haml
+++ b/app/views/punchcards/_punchcard.html.haml
@@ -16,10 +16,10 @@
       .col-md-10.col-md-offset-1
         .heatmap{ id: "cal-heatmap-#{card.id}", 'data-punchcard': card.id }
         .btn-group.btn-group-xs
-          #cal-previous.btn.btn-default
-            %i.fa.fa-arrow-left
-          #cal-next.btn.btn-default
-            %i.fa.fa-arrow-right
+          .btn.btn-default{ id: "cal-previous-#{card.id}" }
+            %span.fa.fa-arrow-left
+          .btn.btn-default{ id: "cal-next-#{card.id}" }
+            %span.fa.fa-arrow-right
 
     = render 'punchcards/stats', card: card
 
