--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -15,7 +15,7 @@
               %i.fa.fa-calendar-plus-o
               Create Punchcard
           %li
-            = link_to todays_report_path do
+            = link_to today_path do
               %i.fa.fa-calendar
               Today
 
