Fix Bootswatch CDN link

--- a/app/views/layouts/_head.html.haml
+++ b/app/views/layouts/_head.html.haml
@@ -4,7 +4,7 @@
 = javascript_include_tag 'application'
 
 / Bootstrap
-= stylesheet_link_tag "https://bootswatch.com/#{BOOTSTRAP_THEME}/bootstrap.min.css"
+= stylesheet_link_tag "https://bootswatch.com/3/#{BOOTSTRAP_THEME}/bootstrap.min.css"
 = javascript_include_tag 'https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js', "data-turbolinks-eval" => false
 
 = csrf_meta_tags
