Upgrade to Bootstrap 4

--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -1,25 +1,21 @@
 .row
-    .col-md-12
-        %footer.text-center
-            %p
-                = link_to 'Home', root_path
-                ·
-                = link_to 'Terms & Conditions', root_path
-                ·
-                = link_to 'Privacy', root_path
-                ·
-                = link_to 'About', root_path
-                ·
-                = link_to 'FAQ', root_path
-                ·
-                = link_to 'Contact', root_path
-            
-            %p
-                PunchCard &copy; 2016
-        
-            %p
-                %a{:href => "#"}
-                    %i.fa.fa-facebook
-            
-                
-                
+  .col
+    %footer.text-center
+      %p
+        = link_to 'Home', root_path
+        ·
+        = link_to 'Terms & Conditions', root_path
+        ·
+        = link_to 'Privacy', root_path
+        ·
+        = link_to 'About', root_path
+        ·
+        = link_to 'FAQ', root_path
+        ·
+        = link_to 'Contact', root_path
+
+      %p Hourglass &copy; 2016
+
+      %p
+        %a{:href => "#"}
+          %i.fa.fa-facebook
