--- a/app/views/shared/_manage_resource.html.haml
+++ b/app/views/shared/_manage_resource.html.haml
@@ -1,5 +1,5 @@
-.btn-group.btn-group-xs
-  = link_to [:edit, resource], class: 'btn btn-default' do
+.btn-group.btn-group-sm
+  = link_to [:edit, resource], class: 'btn btn-secondary' do
     %span.fa.fa-pencil
     Edit
   = link_to resource, method: :delete, data: { confirm: 'Are you sure?' },
