--- a/app/views/layouts/_head.html.haml
+++ b/app/views/layouts/_head.html.haml
@@ -4,8 +4,8 @@
 = javascript_include_tag 'application'
 
 / Bootstrap
-= stylesheet_link_tag "https://bootswatch.com/3/#{BOOTSTRAP_THEME}/bootstrap.min.css"
-= javascript_include_tag 'https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js', "data-turbolinks-eval" => false
+= stylesheet_link_tag "https://bootswatch.com/4/#{BOOTSTRAP_THEME}/bootstrap.min.css"
+= javascript_include_tag 'https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js', 'data-turbolinks-eval' => false
 
 = csrf_meta_tags
 = favicon_link_tag 'favicon.ico'
