--- a/app/views/layouts/registrations.html.haml
+++ b/app/views/layouts/registrations.html.haml
@@ -5,17 +5,16 @@
   = render 'layouts/head'
 
 %body
-  .container
+  .container.m-5
     .row
-      .col-md-6.col-md-offset-3
+      .col-md-6.mx-auto
         #logo.text-center
           .row
             .col-md-12
               = link_to root_path do
                 %h1= image_tag 'hourglass_icon128.png'
 
-        // CONTENT
-        .panel.panel-default
-          .panel-body
+        .card
+          .card-body
             = yield
 
