--- a/app/views/records/_form.html.haml
+++ b/app/views/records/_form.html.haml
@@ -3,9 +3,9 @@
     .modal-dialog{:role => "document"}
       .modal-content
         .modal-header
+          %h4.modal-title Punch Record
           %button.close{"aria-label" => "Close", "data-dismiss" => "modal", :type => "button"}
             %span{"aria-hidden" => "true"} ×
-          %h4.modal-title Punch Record
         .modal-body
           .row
             .col-md-6
@@ -19,5 +19,5 @@
                 style: 'resize: vertical;', placeholder: 'Enter record description here...' }, required: true
 
         .modal-footer
-          %button.btn.btn-default{"data-dismiss" => "modal", :type => "button"} Close
           = f.button :submit, class: 'btn btn-success'
+          %button.btn.btn-secondary{"data-dismiss" => "modal", :type => "button"} Close
