--- a/app/views/records/today.html.haml
+++ b/app/views/records/today.html.haml
@@ -1,31 +1,30 @@
-%h3 Today's Report
+%h1 Today's Report
 
-- if !@todays_records.blank?
-    %table.table.table-responsive.table-striped.table-hover
-        %thead
-            %tr
-                %th #
-                %th Punchcard
-                %th Date
-                %th Hours
-                %th
-        %tbody
-            - @todays_records.each_with_index do |record, index|
-                %tr
-                    %td= index + 1
-                    %td
-                        %span= emojify record.punchcard.icon
-                        = record.punchcard.name
-                    %td= record.date.strftime("%A %B %d %Y")
-                    %td
-                        %i.fa.fa-clock-o
-                        = record.hours
-                    %td= link_to 'View Record', [record.punchcard, record]
+- unless @todays_records.blank?
+  %table.table.table-responsive.table-striped.table-hover
+    %thead
+      %tr
+        %th #
+        %th Punchcard
+        %th Date
+        %th Hours
+        %th
+    %tbody
+      - @todays_records.each_with_index do |record, index|
+        %tr
+          %td= index + 1
+          %td
+            %span= emojify record.punchcard.icon
+            = record.punchcard.name
+          %td= record.date.strftime("%A %B %d %Y")
+          %td
+            %i.fa.fa-clock-o
+            = record.hours
+          %td= link_to 'View Record', [record.punchcard, record]
 - else
-    %p.text-center.small There are no records for today.
+  %p.text-center There are no records for today.
 
-%hr
 
 = link_to root_path do
-    %i.fa.fa-arrow-left
-    Back
+  %i.fa.fa-arrow-left
+  Back
