--- a/app/views/punchcards/new.html.haml
+++ b/app/views/punchcards/new.html.haml
@@ -1,5 +1,5 @@
-.card
-  .card-body
-    %h1 Create New Punchcard
+%h2 Create New Punchcard
 
-    = render 'form'
+%p.text-muted Create a new punchcard so that you can start logging your time for a particular activity.
+
+= render 'form'
