--- a/app/views/records/_search_records.html.haml
+++ b/app/views/records/_search_records.html.haml
@@ -1,14 +1,4 @@
-.well
-    = search_form_for @q, url: punchcard_records_path do |f|
-    
-        .row
-            .col-md-10
-                .form-group
-                    = f.label :description_cont, 'Search Entries'
-                    = f.search_field :description_cont, placeholder: 'Example: Harry Potter and the Chamber of Secrets', class: 'form-control input-sm'
+= search_form_for @q, url: punchcard_records_path, class: 'form-inline' do |f|
+  = f.search_field :description_cont, placeholder: 'Search', class: 'form-control mb-2 mr-sm-2'
 
-            .col-md-2
-                .form-group
-                    %br
-                    = f.submit 'Search', class: 'btn btn-primary btn-sm'
-                        
+  = f.submit 'Search', class: 'btn btn-primary mb-2'
