--- a/app/views/records/index.html.haml
+++ b/app/views/records/index.html.haml
@@ -1,44 +1,36 @@
-.page-header
-    %h2
-        = "#{@card.name} - All Entries"
+%h2= "#{@card.name} - All Entries"
 
 / SEARCH
 .row
-    .col-md-12
-        = render 'search_records'
+  .col-md-12
+    = render 'search_records'
 
-%hr
-
-%table.table.table-responsive.table-striped.table-hover
-    %thead
+.row
+  .col-md-12
+    %table.table.table-sm.table-striped.table-hover
+      %thead
         %tr
-            %th #
-            %th Date
-            %th Hours
-            %th
-    %tbody
+          %th #
+          %th Date
+          %th Hours
+          %th
+      %tbody
         - @records.each_with_index do |record, index|
-            %tr
-                %td= index+1
-                %td= link_to record.date.strftime("%A %B %d %Y"), [@card, record]
-                %td
-                    %i.fa.fa-clock-o
-                    = record.hours
-                %td
-                    .btn-group
-                        = link_to [@card, record], class: 'btn btn-xs btn-default' do
-                            %i.fa.fa-eye
-                        = link_to [:edit, @card, record], class: 'btn btn-xs btn-default' do
-                            %i.fa.fa-pencil
-                        = link_to [@card, record], method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-xs btn-danger' do
-                            %i.fa.fa-trash
+          %tr
+            %td= index+1
+            %td= link_to record.date.strftime("%A %B %d %Y"), [@card, record]
+            %td
+              %i.fa.fa-clock-o
+              = record.hours
+            %td
+              %ul.list-inline
+                %li.list-inline-item
+                  = link_to [:edit, @card, record] do
+                    = image_tag 'icons/pencil.png'
+                %li.list-inline-item
+                  = link_to [@card, record], method: :delete, data: { confirm: 'Are you sure?' } do
+                    = image_tag 'icons/delete.png'
 
-/ PAGINATION
-.text-center
-    = will_paginate @records, renderer: BootstrapPagination::Rails, class: 'pagination-sm'
-
-%hr
-
-= link_to root_path do
-    %i.fa.fa-arrow-left
-    Back
+    / PAGINATION
+    .text-center
+      = will_paginate @records, renderer: BootstrapPagination::Rails, class: 'pagination-sm'
