--- a/app/views/records/new.js.erb
+++ b/app/views/records/new.js.erb
@@ -6,10 +6,10 @@ $('.datepicker').datetimepicker({
   useCurrent: true,
   defaultDate: new Date(),
   icons: {
-    time: "fa fa-clock-o",
-    date: "fa fa-calendar",
-    up: "fa fa-arrow-up",
-    down: "fa fa-arrow-down",
+    time: 'fa fa-clock-o',
+    date: 'fa fa-calendar',
+    up: 'fa fa-arrow-up',
+    down: 'fa fa-arrow-down',
     previous: 'fa fa-arrow-left',
     next: 'fa fa-arrow-right',
     today: 'fa fa-calendar-times-o'
