Implement goals feature

--- a/app/views/punchcards/_punchcard.html.haml
+++ b/app/views/punchcards/_punchcard.html.haml
@@ -40,4 +40,4 @@
         = card.records.last.date.strftime('%A %B %d %Y')
 
         .pull-right
-          = link_to 'View all records', punchcard_records_path(card)
+          = link_to 'View all entries', punchcard_records_path(card)
