--- a/app/views/punchcards/_form.html.haml
+++ b/app/views/punchcards/_form.html.haml
@@ -1,23 +1,30 @@
-= form_for @card do |f|
+= simple_form_for @card do |f|
   // ERROR MESSAGES
   = render 'shared/errors', model: @card
 
   .row
     .col-md-12
       .form-group
-        = f.label :name
-        = f.text_field :name, autofocus: true, class: 'form-control input-sm'
+        = f.input :name, autofocus: true
 
       .form-group
-        = f.label :description
-        = f.text_field :description, class: 'form-control input-sm'
+        = f.input :description
 
       .form-group
-        = f.label :icon, 'Emoji'
-        = f.text_field :icon, class: 'form-control input-sm', placeholder: "Example: :cat:"
+        = f.input :icon, placeholder: 'Example: :cat:'
         %small.form-text.text-muted
           = link_to 'Browse Emojis', 'http://www.emoji-cheat-sheet.com/', target: '_blank'
+  .row
+    .col-md-12
+      %h4 Goal
+      %p.text-muted
+        You can define an optional
+        %strong monthly goal
+        of hours for this punchcard.
 
-      .form-group
-        = f.submit ( f.object.new_record? ? 'Add Punchcard' : 'Save Changes'), class: 'btn btn-success'
-        = link_to 'Cancel', punchcards_path, class: 'btn btn-outline-secondary'
+      = f.fields_for :goal, @goal do |goal_fields|
+        .form-group
+          = goal_fields.input :monthly_hours, input_html: { in: 0.5..10, step: 0.5 }, required: true
+
+  .form-group
+    = f.submit ( f.object.new_record? ? 'Add Punchcard' : 'Save Changes'), class: 'btn btn-success'
