Fix edit records

--- a/app/views/records/new.js.erb
+++ b/app/views/records/new.js.erb
@@ -1,4 +1,4 @@
-$('#modal-container').html('<%= j render "records/form" %>');
+$('#modal-container').html('<%= j render "records/modal_form" %>');
 $('#manage-record').modal('show');
 
 $('.datepicker').datetimepicker({
