More UI improvements

--- a/app/views/layouts/_nav.html.haml
+++ b/app/views/layouts/_nav.html.haml
@@ -2,12 +2,10 @@
   = link_to root_path do
     = image_tag 'https://png.icons8.com/dusk/64/000000/timer.png', class: 'mb-5'
 
-  %ul.list-unstyled
-    %li
-      = link_to punchcards_path do
-        = image_tag 'icons/time.png'
-        Punchcards
-    %li
-      = link_to today_path do
-        = image_tag 'icons/date.png'
-        Today
+  %nav.nav.flex-column
+    = link_to punchcards_path, class: 'nav-link' do
+      = image_tag 'icons/time.png'
+      Punchcards
+    = link_to today_path, class: 'nav-link' do
+      = image_tag 'icons/date.png'
+      Today
