Fix today's view

--- a/app/views/records/index.html.haml
+++ b/app/views/records/index.html.haml
@@ -13,7 +13,7 @@
           .d-flex.w-100.justify-content-between
             %h6.mb-1
               %strong= record.date.strftime('%A %B %d %Y')
-            %h6
+            %h6.text-muted
               %span.fa.fa-clock-o
               = record.hours
               Hours
