Show emojis in cards

--- a/app/views/punchcards/_punchcard.html.haml
+++ b/app/views/punchcards/_punchcard.html.haml
@@ -1,7 +1,7 @@
 .card.my-5
   .card-body
     %h3.card-title
-      /= emojify card.icon, size: :small
+      = emojify card.icon, size: :medium
       %strong= card.name
 
       %ul.list-inline.pull-right
